# modbus_master

./: .gitignore  CMakeLists.txt  README.md
scripts/: modbus_slave_sim.py  modbus_tcp_slave_sim.py
src/: ConnectionManager.cpp  ConnectionManager.h  MainWindow.cpp  MainWindow.h  ModbusClient.cpp  ModbusClient.h  RegisterModel.cpp  RegisterModel.h  main.cpp
